--- a/frontend/src/app/components/widget/preview-item/preview-item.component.scss
+++ b/frontend/src/app/components/widget/preview-item/preview-item.component.scss
@@ -1,5 +1,5 @@
 .body {
-    width: calc(50vw - 1px);
+    width: 50vw;
     height: calc(50vh - 24px);
     display: flex;
     justify-content: center;
