--- a/frontend/src/app/components/widget/preview-item/preview-item.component.scss
+++ b/frontend/src/app/components/widget/preview-item/preview-item.component.scss
@@ -22,6 +22,12 @@ mat-icon {
     margin-right: .5em;
 }
 
+.timer {
+    margin-right: 0;
+    margin-left: .25em;
+    color: #4ae779;
+}
+
 .temperature {
     font-size: 2em;
 }
