--- a/frontend/src/app/components/home/ac-item/ac-item.component.scss
+++ b/frontend/src/app/components/home/ac-item/ac-item.component.scss
@@ -103,6 +103,55 @@ mat-button-toggle-group:last-of-type {
     margin-bottom: 0;
 }
 
+.timer {
+    display: flex;
+    justify-content: center;
+    margin-top: 1.25em;
+    margin-bottom: .25em;
+}
+
+.inactive-timer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 75%;
+    color: #b1b1b1;
+}
+
+.off {
+    color: crimson;
+}
+
+.active-timer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 90%;
+    color: #b1b1b1;
+}
+
+.on {
+    color: #4ae779;
+}
+
+.time {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.time-value {
+    font-size: 2em;
+    margin-top: .25em;
+    margin-bottom: .25em;
+}
+
+h3 {
+    margin-bottom: 0;
+}
+
 p {
     color: rgb(159, 159, 159);
     margin-bottom: 0;
