--- a/frontend/src/app/components/widget/preview-item/preview-item.component.html
+++ b/frontend/src/app/components/widget/preview-item/preview-item.component.html
@@ -2,7 +2,7 @@
     <div class="center">
         <h3>
             {{ ac.name }}
-            <mat-icon class="timer">timer</mat-icon>
+            <mat-icon class="timer" *ngIf="ac.timer">timer</mat-icon>
         </h3>
 
         <div *ngIf="status">
